# barbies

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  barbie.cabal  barbies.cabal  shell.nix  stack-ghc-802.yaml  stack-ghc-8102.yaml  stack-ghc-864.yaml  stack-ghc-865.yaml  stack-ghc-881.yaml  stack-ghc-883.yaml  stack-ghc-901.yaml  stack-ghc-924.yaml  stack-nightly.yaml  stack.yaml
src/: Barbies.hs
src/Barbies/: Bare.hs  Bi.hs  Constraints.hs  Internal.hs
src/Barbies/Generics/: Applicative.hs  Bare.hs  Constraints.hs  Distributive.hs  Functor.hs  Traversable.hs
src/Barbies/Internal/: Applicative.hs  ApplicativeB.hs  ApplicativeI.hs  ApplicativeT.hs  Bare.hs  BareB.hs  Bi.hs  Constraints.hs  ConstraintsB.hs  ConstraintsI.hs  ConstraintsT.hs  Container.hs  Containers.hs  Dicts.hs  DistributiveB.hs  DistributiveT.hs  Functor.hs  FunctorB.hs  FunctorI.hs  FunctorT.hs  Instances.hs  MonadT.hs  Product.hs  ProductC.hs  Traversable.hs  TraversableB.hs  TraversableI.hs  TraversableT.hs  Trivial.hs  Wear.hs  Wrappers.hs  Writer.hs
src/Data/: Barbie.hs
src/Data/Barbie/: Bare.hs  Constraints.hs  Container.hs  Internal.hs  Trivial.hs
src/Data/Barbie/Internal/: Bare.hs  Classification.hs  Constraints.hs  Dicts.hs  Functor.hs  Generics.hs  Instances.hs  Product.hs  ProductC.hs  ProofB.hs  Tag.hs  Tags.hs  Traversable.hs  Wear.hs
src/Data/Barbie/Internal/Deprecated/: Generics.hs  Tags.hs  Wear.hs
src/Data/Functor/: Barbie.hs  Indexed.hs  Prod.hs  Transformer.hs
src/Data/Generics/: GenericN.hs
test/: Barbies.hs  BarbiesW.hs  BarbiesWDeprecated.hs  Clothes.hs  Spec.hs  TestBarbies.hs  TestBarbiesW.hs  TestBiBarbies.hs
test-legacy/: Barbies.hs  BarbiesW.hs  Clothes.hs  Spec.hs  TestBarbies.hs  TestBarbiesW.hs
test-legacy/Legacy/: Clothes.hs  Spec.hs  TestBarbies.hs  TestBarbiesW.hs
test-legacy/Legacy/Spec/: Bare.hs  Constraints.hs  Functor.hs  Product.hs  Traversable.hs  Wrapper.hs
test-legacy/Spec/: Bare.hs  Constraints.hs  Functor.hs  Product.hs  Wrapper.hs
test/Spec/: Applicative.hs  Bare.hs  Constraints.hs  Distributive.hs  Functor.hs  Product.hs  Traversable.hs  Wrapper.hs
