name:           barbies
version:        1.1.3.0
synopsis:       Classes for working with types that can change clothes.
description:    Types that are parametric on a functor are like Barbies that have an outfit for each role. This package provides the basic abstractions to work with them comfortably.
category:       Data-structures
homepage:       https://github.com/jcpetruzza/barbies#readme
bug-reports:    https://github.com/jcpetruzza/barbies/issues
author:         Daniel Gorin
maintainer:     jcpetruzza@gmail.com
copyright:      2018 Daniel Gorin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/jcpetruzza/barbie

library

  exposed-modules:
      Barbies.Bare
      Barbies.Constraints
      Barbies.Internal

      Data.Functor.Barbie

      -- Deprecated modules
      Data.Barbie
      Data.Barbie.Bare
      Data.Barbie.Constraints
      Data.Barbie.Container
      Data.Functor.Prod

  other-modules:
      Barbies.Internal.Bare
      Barbies.Internal.Constraints
      Barbies.Internal.Dicts
      Barbies.Internal.Functor
      Barbies.Internal.Instances
      Barbies.Internal.Product
      Barbies.Internal.ProductC
      Barbies.Internal.Traversable
      Barbies.Internal.Wear
      Data.Barbie.Trivial

      Data.Generics.GenericN

  hs-source-dirs:
      src

  build-depends:
      base >=4.7 && <5
     ,bifunctors

  ghc-options: -Wall -Wnoncanonical-monoid-instances

  default-language: Haskell2010
  default-extensions:
      ConstraintKinds
    , DataKinds
    , DefaultSignatures
    , DeriveGeneric
    , DeriveDataTypeable
    , EmptyCase
    , ExplicitForAll
    , FlexibleContexts
    , FlexibleInstances
    , KindSignatures
    , LambdaCase
    , MultiParamTypeClasses
    , Rank2Types
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , TypeOperators

test-suite barbies-test
  type: exitcode-stdio-1.0

  main-is: Spec.hs

  other-modules:
      TestBarbies
      TestBarbiesW
      Clothes
      Spec.Bare
      Spec.Constraints
      Spec.Functor
      Spec.Traversable
      Spec.Product
      Spec.Wrapper

  hs-source-dirs:
      test

  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

  build-depends:
      barbies
    , base >=4.7 && <5
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  default-language: Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    KindSignatures
    LambdaCase
    Rank2Types
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

-- This tests that the deprecated Data.Barbie interface
-- can still be used to build code writen against 1.x,
-- with deprecation warnings
test-suite barbies-test-legacy
  type: exitcode-stdio-1.0

  main-is: Spec.hs

  other-modules:
      TestBarbies
      TestBarbiesW
      Clothes
      Spec.Bare
      Spec.Constraints
      Spec.Functor
      Spec.Traversable
      Spec.Product
      Spec.Wrapper

  hs-source-dirs:
      test-legacy

  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wno-deprecations

  build-depends:
      barbies
    , base >=4.7 && <5
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck

  default-language: Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    KindSignatures
    LambdaCase
    Rank2Types
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators
